--- a/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SetupAssistView.xaml
@@ -25,6 +25,9 @@
             <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Trigger_Clicked" Margin="15, 5, 15, 5" >
                 <iconPacks:PackIconMaterial HorizontalAlignment="Stretch" VerticalAlignment="Center" Style="{StaticResource Mouvent.RoundIconButtonStyle.LightIcon}" Width="20" Height="20" Kind="CameraOutline"></iconPacks:PackIconMaterial>
             </common:MvtButton>
+            
+            <Rectangle StrokeThickness="1" Stroke="Black" />
+
             <common:MvtButton HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Reference_Clicked" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Ref" Foreground="White"/>
             </common:MvtButton>
@@ -35,7 +38,9 @@
                 <TextBlock Text="Down" Foreground="White"/>
             </common:MvtButton>
 
-            <common:MvtButton x:Name="StartButton" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Start_Clicked" Margin="15, 5, 15, 5" >
+            <Rectangle StrokeThickness="1" Stroke="Black" />
+            
+            <common:MvtButton x:Name="StartAlignButton" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="StartAlign_Clicked" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Align" Foreground="White"/>
             </common:MvtButton>
 
@@ -46,6 +51,8 @@
             <common:MvtButton x:Name="StartRegisterButton" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="StartRegister_Clicked" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Register" Foreground="White"/>
             </common:MvtButton>
+
+            <Rectangle StrokeThickness="1" Stroke="Black" />
 
             <common:MvtButton x:Name="BTN_Continue" HorizontalAlignment="Left" Style="{StaticResource Mouvent.RoundIconButtonStyle.DarkBackgroundButton.SizeL}" Click="Done_Clicked" IsChecked="{Binding CanContinue}" Margin="15, 5, 15, 5" >
                 <TextBlock Text="Done" Foreground="White"/>
