--- a/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
@@ -3,6 +3,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:common="clr-namespace:RX_Common;assembly=rx_common_lib_cs"
+        xmlns:rx="clr-namespace:RX_DigiPrint.Helpers"
         xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         Title="Camera Settings" 
         ResizeMode="NoResize"
@@ -44,8 +45,10 @@
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Camera" VerticalAlignment="Center"/>
                 <ComboBox Grid.Row="0" Grid.Column="1" x:Name="CB_Camera" Margin="10,5"/>
 
+                <!--
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Stream Caps" VerticalAlignment="Center"/>
-
+                -->
+                
                 <!--
                 <TextBlock Grid.Row="2" Grid.Column="0" Text="Camera Caps" VerticalAlignment="Center" />
                 <ComboBox  Grid.Row="2" Grid.Column="1" x:Name="CB_CameraCaps" Margin="10,5"/>
@@ -57,6 +60,15 @@
                 <common:MvtNumBox  Grid.Row="4" Grid.Column="2" Margin="10,5" Width="70" HorizontalAlignment="Left" x:Name="NB_DistToStops"/>
                 <TextBlock Grid.Row="4" Grid.Column="2" Text="m" Margin="85,5,0,5" VerticalAlignment="Center" HorizontalAlignment="Left"/>
 
+                <TextBlock Grid.Row="5" Grid.Column="0" Text="Tolerance" VerticalAlignment="Center" />
+                <rx:RxComboBox x:Name="CB_Tolerance"
+                    Grid.Row="5" Grid.Column="1"
+                    Width="70"
+                    HorizontalAlignment="Left"
+                    HorizontalContentAlignment="Left"
+                    Margin="10,5"
+                    />
+                <TextBlock Grid.Row="5" Grid.Column="2" Text="Rev" Margin="85,5,0,5" VerticalAlignment="Center" HorizontalAlignment="Left"/>
             </Grid>
         </GroupBox>
 
