--- a/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
+++ b/mvt_digiprint_gui/Views/SetupAssistView/SA_Settings.xaml
@@ -45,6 +45,9 @@
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="Camera" VerticalAlignment="Center"/>
                 <ComboBox Grid.Row="0" Grid.Column="1" x:Name="CB_Camera" Margin="10,5"/>
 
+                <TextBlock Grid.Row="1" Grid.Column="0" Text="Printer" VerticalAlignment="Center"/>
+                <ComboBox Grid.Row="1" Grid.Column="1" x:Name="CB_Printer" Margin="10,5" DisplayMemberPath="Name"/>
+
                 <!--
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="Stream Caps" VerticalAlignment="Center"/>
                 -->
